--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,28 @@
 *{
     box-sizing: border-box;
+    margin: 0;
 }
-
+main{
+    margin: auto;
+    margin-top: 2rem;
+}
 .container{
     display: flex;
     flex-direction: column;
     width: 50vw;
+}
+.heading{
+    /* text-align: center; */
+    padding-bottom: 1rem;
+}
+.description{
+    width: 20rem;
+}
+.form_bill, .form_cash{
+    margin: 1rem;
+}
+.btn-check{
+    width: 20vw;
+    padding: 5px;
+    margin: 1rem;
 }
